# fastapi-nix-example

./: Dockerfile  README.md  flake.nix  pyproject.toml
fastapi_nix_example/: app.py
