[tool.poetry]
name = "fastapi-nix-example"
version = "0.1.0"
description = ""
authors = ["Minh Hoang <minh@rthoops.net>"]
readme = "README.md"
packages = [{include = "fastapi_nix_example"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"

[tool.poetry.scripts]
app = "fastapi_nix_example.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
